<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_second_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashActivity">

    <ImageView
        android:id="@+id/splash_auth_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.constraint.Group
        android:id="@+id/splash_auth_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="splash_auth_layout,splash_auth_button,splash_auth_no_account_title,splash_auth_no_account" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/splash_auth_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/auth_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_auth_logo">

        <TextView
            android:id="@+id/splash_auth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/splash_auth_title"
            android:textColor="@color/text_dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_vk_button"
            app:layout_constraintEnd_toEndOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_layout"
            app:layout_constraintTop_toTopOf="@id/splash_auth_layout" />

        <Button
            android:id="@+id/splash_auth_vk_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/vk_button_background"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_sub_title"
            app:layout_constraintEnd_toEndOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_layout"
            app:layout_constraintTop_toBottomOf="@id/splash_auth_title" />

        <TextView
            android:id="@+id/splash_auth_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/splash_auth_subtitle"
            android:textColor="@color/text_dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_email"
            app:layout_constraintEnd_toEndOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_layout"
            app:layout_constraintTop_toBottomOf="@id/splash_auth_vk_button" />

        <TextView
            android:id="@+id/splash_auth_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:text="@string/splash_auth_email"
            android:textColor="@color/text_light_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_email"
            app:layout_constraintStart_toStartOf="@id/splash_auth_email"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/splash_auth_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_blue_bordered_background"
            android:hint="@string/splash_auth_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_password"
            app:layout_constraintEnd_toEndOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_layout"
            app:layout_constraintTop_toBottomOf="@id/splash_auth_sub_title"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/splash_auth_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:text="@string/splash_auth_password"
            android:textColor="@color/text_light_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_password"
            app:layout_constraintStart_toStartOf="@id/splash_auth_password"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/splash_auth_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_blue_bordered_background"
            android:hint="@string/splash_auth_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/splash_auth_remember"
            app:layout_constraintEnd_toEndOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_layout"
            app:layout_constraintTop_toBottomOf="@id/splash_auth_email"
            tools:ignore="Autofill,TextFields" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/splash_auth_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/splash_auth_remember"
            android:textColor="@color/text_light_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/splash_auth_layout"
            app:layout_constraintStart_toStartOf="@id/splash_auth_password"
            app:layout_constraintTop_toBottomOf="@id/splash_auth_password" />

        <TextView
            android:id="@+id/splash_auth_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/splash_auth_forgot"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@id/splash_auth_remember"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/splash_auth_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_button_rounded_background"
        android:text="@string/splash_auth_enter_button"
        android:textColor="@color/colorAccent"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_auth_layout" />

    <TextView
        android:id="@+id/splash_auth_no_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="56dp"
        android:padding="10dp"
        android:text="@string/splash_auth_register_title"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/splash_auth_no_account"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_auth_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/splash_auth_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/splash_auth_register"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/splash_auth_no_account_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/splash_auth_no_account_title" />

</android.support.constraint.ConstraintLayout>
