<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/your_name"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/surveyFirstName"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_rounded_stroke_drawable"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                tools:text="Bla bla" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/your_bdate"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/surveyFirstDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edittext_rounded_stroke_drawable"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/text_dark_gray"
                    android:textSize="14sp"
                    tools:text="Bla bla" />

                <Button
                    android:id="@+id/surveyFirstDateBtn"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@drawable/calendar_survey_drawable" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/your_town"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/surveyFirstTown"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_rounded_stroke_drawable"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/your_role"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/surveyFirstRole"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_rounded_stroke_drawable"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="128dp" />

    </LinearLayout>
</ScrollView>